--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,9 +24,11 @@
     "@testing-library/user-event": "13.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "serve": "13.0.2",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "axios": "0.24.0"
   },
   "devDependencies": {
     "eslint-config-trybe-frontend": "1.3.1",
